fix gap in team section

--- a/src/pages/about_us/components/TeamSection/teamSection.module.css
+++ b/src/pages/about_us/components/TeamSection/teamSection.module.css
@@ -38,7 +38,7 @@
 
 .img1, .img2, .img3, .img4, .img5, .img6, .img7 {
     position: relative;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
